--- a/app/views/current_bps/display_bp.html.erb
+++ b/app/views/current_bps/display_bp.html.erb
@@ -15,15 +15,21 @@
 		<p id='warning_msg'><%= @warning_message %></p>
 	<% end %>
 	
+	<% if user_signed_in? %>
+		<p class='big_notice'>Please come back to HomeBloodPressure.co.uk to take another pair of readings <span><%= @when_next_reading %></span>.</p>
+	<% end %>
+	
 	<p><%= @average_bp_message %></p>
 	
-	<p>...However, to get a more accurate picture of what your blood pressure is like we need to take more readings like this over the next 4 days. Some other illnesses also affect what is considered to be a healthy blood pressure - we will give you expert, personalised advice based on your individual health.</p>
+	<p>...However, to get a more accurate picture of what your blood pressure is like we need to take more readings like this over the next 4 days. This is because your blood pressure will vary from hour to hour and day to day, so one or two readings can be misleading. We want to give you accurate advice based on sound evidence!</p>
+	<p>Some illnesses may also affect what is considered to be a healthy blood pressure - after taking some readings we may need to ask you more questions about your health to allow us to give you accurate, personalised advice.</p>
 	
-	<% if user_signed_in? %>
-		<p>Please come back to HomeBloodPressure.co.uk to take another pair of readings <span><%= @when_next_reading %></span>.</p>
-	<% else %>
-		<p>Sign up so you can check your blood pressure over the next 4 days and receive free personalised advice on how best to control it. We cover everything from lifestyle advice through to supplying prescriptions for medications.</p>
-		<div id='sign_up'>
+	<% if !user_signed_in? %>
+		<p>Sign up so you can check your blood pressure over the next 4 days and receive free personalised advice on how best to control it. We will give advice on all aspects of controlling your blood pressure from lifestyle changes through to medications. We can even supply prescriptions if you need them!</p>
+		
+		<div style ="float:left; height:300px; width:220px;"></div>
+		
+		<div id='sign_up_partial'>
 			<%= render :partial => 'devise/registrations/new' %>
 		</div>
 	<% end %>
