--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -15,7 +15,7 @@
 	<div id='header'>
 		<%= image_tag "topbanner.jpg" %>
 		<div id='topbannertitle'>
-			HomeBloodPressure.co.uk
+			<%= link_to("HomeBloodPressure.co.uk", root_path) %>
 		</div>
 		<div id='user_nav'>
 			<% if user_signed_in? %>
