small text changes

--- a/app/views/current_bps/how_to_measure_bp.html.erb
+++ b/app/views/current_bps/how_to_measure_bp.html.erb
@@ -31,7 +31,7 @@
 		<p>The pair of numbers displayed on your monitor are your blood pressure; the larger number is the systolic value (this is the pressure in your arterial blood vessels when the heart beats to pump blood around your body), the lower number is the diastolic value (this is the pressure in your arterial blood vessels when the heart is relaxed, i.e. between heart beats). Please record them both as they are equally important. If there is also a single number displayed it will be your pulse measurement. This doesn't need to be recorded.</p>
 
 	<h4>Take a second reading</h4>
-		<p>Wait for a minute and then take a second reading. A pair of readings provides a more accurate picture of your blood pressure.</p>
+		<p>Wait for one minute and then take a second reading. A pair of readings provides a more accurate picture of your blood pressure.</p>
 	
 	</div>
 </div>
