--- a/app/views/current_bps/landing_page.html.erb
+++ b/app/views/current_bps/landing_page.html.erb
@@ -48,7 +48,7 @@
 			<%= image_tag("man_running_small_2.jpg", :class => "picture_right") %>	
 			<h4>What exercise do I need to do?</h4>
 				
-				<p>In the past you may have found the advice about exercise very confusing. This is because we actually know very little about the effects of exercise on your blood pressure. There is not much good evidence that exercise helps your blood pressure.</p>
+				<p>In the past you may have found the advice about exercise very confusing. This is because we actually know very little about the effects of exercise on your blood pressure. There is not a lot of accurate information available about the effects of exercise on blood pressure. The prevailing opinion is that it is probably helpful.</p>
 				<p>This ignores all the other benefits of exercise on your physical and mental health.  Exercise helps with your coordination and strength. It can also be sociable and fun if you choose the right activity.</p>
 				<p>The current best advice about exercise and blood pressure is that if you exercise for 50 to 60 minutes,  3 or 4 times a week, it probably helps to lower your blood pressure.</p>
 				
@@ -64,7 +64,7 @@
 				<p>You may like to try relaxation therapy or meditation to lower your blood pressure. Many people find these beneficial. They are not routinely available on the NHS so you will have to find a private supplier. You will find them on our links page.</p>
 			
 			<h4>How about acupuncture?</h4>
-				<p>Although you may wish to try acupuncture to see if it helps with your blood pressure, at the moment we do not know whether it is helpful.</p>
+				<p>You may wish to try acupuncture to see if it helps with your blood pressure. However at the moment there is a lack of good quality research showing whether it is helpful or not.</p>
 				
 			<h3>Which medication should I take?</h3>
 				<p>You may find all the different medications and tablet names to treat high blood pressure confusing. You are not alone, in fact many doctors find it confusing as well.</p>
