--- a/app/views/current_bps/how_to_measure_bp.html.erb
+++ b/app/views/current_bps/how_to_measure_bp.html.erb
@@ -16,7 +16,7 @@
 	</div>
 	
 	<h4>Make sure you are relaxed</h4>
-		<p>Rest for five minutes before taking a blood pressure reading. Make sure you are sat down in a quiet place with your feet resting on the floor. Don't take readings when you need the toilet or have just eaten a big meal, or within thirty minutes of smoking or drinking caffeine.</p>
+		<p>Rest for five minutes before taking a blood pressure reading. Make sure you are sitting down in a quiet place with your feet resting on the floor. Don't take readings when you need the toilet or have just eaten a big meal, or within thirty minutes of smoking or drinking caffeine.</p>
 	
 	<h4>Choose an arm</h4>
 		<p>Use the same arm each time you measure your blood pressure. It doesn't matter which arm you choose UNLESS there is more than a 20mmHg difference in the readings between the two sides, in which case use the side which gives the higher reading.</p>
