--- a/app/views/notifier/sign_up.html.erb
+++ b/app/views/notifier/sign_up.html.erb
@@ -6,7 +6,7 @@
 
 <p style='margin: 10px 45px 0px 25px;'><%= @greeting %></p>
 
-<p style='margin: 10px 45px 0px 25px;'>You have taken the first step to taking control of your own blood pressure from the convenience of your own home.</p>
+<p style='margin: 10px 45px 0px 25px;'>You have taken the first step to taking control of your own blood pressure...</p>
 
 <p style='padding: 5px 10px 5px 10px;
       border-style:solid;
@@ -19,17 +19,11 @@
       text-align: center;
       font-size:12pt;'>Please go to <%= link_to('HomeBloodPressure.co.uk', new_user_session_url) %> to take <%= @a_another_reading %> pair of blood pressure readings <span style='font-weight: bold;'><%= @when_next_reading %></span>.</p>
 
-<p style='margin: 10px 45px 0px 25px;'>Your blood pressure tends to go up and down depending on what you’ve been doing. This means that when you measure it at different times of day, you’ll get different readings. Your blood pressure can go up during exercise, after you drink a cup of coffee, or when you are stressed about something.</p>
+<p style='margin: 10px 45px 0px 25px;'>By using <%= link_to('HomeBloodPressure.co.uk', new_user_session_url) %>, you’ll be able to measure your own blood pressure at home. You’ll have a safe place to store the readings. You’ll be able to see when your next reading is due. You’ll be able to see whether your blood pressure needs treating. And you’ll be able to do it at a time and place that suits you…</p>
 
-<p style='margin: 10px 45px 0px 25px;'>Another thing that can send your blood pressure up is going to the doctors. This is known as “white coat hypertension”. It used to be thought that it wasn’t very common. As more research has been done, we now know that most people’s blood pressure is lower when you measure it at home.</p>
+<p style='margin: 10px 45px 0px 25px;'>If you do decide that your blood pressure needs to be treated then you’ll have the option to use our easy to use prescription delivery service. This will help you to choose the right medication for you. Once you have chosen your medication, you’ll be able to get a prescription delivered to your door.</p>
 
-<p style='margin: 10px 45px 0px 25px;'>This means that if you measure your blood pressure at home, it is more likely to give you a true reading of what your blood pressure is. Because it is likely to be slightly lower than when it’s measured elsewhere, it may mean that you don’t need to take any medication whatsoever.</p>
-
-<p style='margin: 10px 45px 0px 25px;'>For the same reason, because your blood pressure goes up and down, it is better to take an average of a number of readings. This is because an average blood pressure gives a better idea of your risk of having a heart attack or stroke than any single reading.</p>
-
-<p style='margin: 10px 45px 0px 25px;'>To get the most accurate recording of your average blood pressure, you should take two readings each time it is measured. They should be one minute apart. This should be done in the morning (or when you get up) and in the evening (or just before you go to bed). The more readings that you take, the better the result. You should aim to measure your blood pressure for 7 days. The minimum that you need to get an accurate result is 4 days of measurements.</p>
-
-<p style='margin: 10px 45px 0px 25px;'>You may feel that this is quite complicated. We agree, which is why we have designed and built our website to help you. Now you have registered with us, we’ll send you reminders to check your blood pressure, and help you keep track of your measurements.</p>
+<p style='margin: 10px 45px 0px 25px;'>To get started, the first thing you need to do is to take some more blood pressure readings. You need to take readings over at least 4 days. This will give you a more accurate picture of what your blood pressure is actually doing.</p>
 
 <p style='padding: 5px 10px 5px 10px;
       border-style:solid;
@@ -42,8 +36,8 @@
       text-align: center;
       font-size:12pt;'>So, <span style='font-weight: bold;'><%= @when_next_reading %></span>, please go to <%= link_to 'HomeBloodPressure.co.uk', new_user_session_url %> to take <%= @a_another_reading %> pair of blood pressure readings.</p>
 
-<p style='margin: 10px 45px 0px 25px;'>Stay healthy!</p>
+<p style='margin: 10px 45px 0px 25px;'>If you have any questions for us, we’d love to hear from you.</p>
 
-<p style='margin: 10px 45px 0px 25px;'>The HomeBloodPressure.co.uk team</p>
+<p style='margin: 10px 45px 0px 25px;'>Dr Colin Coulthard and Dr Richard Thomas - <%= link_to('HomeBloodPressure.co.uk', new_user_session_url) %> founders.</p>
 
 </div>
