--- a/app/views/notifier/sign_up.text.erb
+++ b/app/views/notifier/sign_up.text.erb
@@ -2,24 +2,18 @@ Welcome to HomeBloodPressure.co.uk
 
 <%= @greeting %>
 
-You have taken the first step to taking control of your own blood pressure from the convenience of your own home.
+You have taken the first step to taking control of your own blood pressure...
 
 Please go to HomeBloodPressure.co.uk to take <%= @a_another_reading %> pair of blood pressure readings <%= @when_next_reading %>.
 
-Your blood pressure tends to go up and down depending on what you’ve been doing. This means that when you measure it at different times of day, you’ll get different readings. Your blood pressure can go up during exercise, after you drink a cup of coffee, or when you are stressed about something.
+By using HomeBloodPressure.co.uk, you’ll be able to measure your own blood pressure at home. You’ll have a safe place to store the readings. You’ll be able to see when your next reading is due. You’ll be able to see whether your blood pressure needs treating. And you’ll be able to do it at a time and place that suits you…
 
-Another thing that can send your blood pressure up is going to the doctors. This is known as “white coat hypertension”. It used to be thought that it wasn’t very common. As more research has been done, we now know that most people’s blood pressure is lower when you measure it at home.
+If you do decide that your blood pressure needs to be treated then you’ll have the option to use our easy to use prescription delivery service. This will help you to choose the right medication for you. Once you have chosen your medication, you’ll be able to get a prescription delivered to your door.
 
-This means that if you measure your blood pressure at home, it is more likely to give you a true reading of what your blood pressure is. Because it is likely to be slightly lower than when it’s measured elsewhere, it may mean that you don’t need to take any medication whatsoever.
-
-For the same reason, because your blood pressure goes up and down, it is better to take an average of a number of readings. This is because an average blood pressure gives a better idea of your risk of having a heart attack or stroke than any single reading.
-
-To get the most accurate recording of your average blood pressure, you should take two readings each time it is measured. They should be one minute apart. This should be done in the morning (or when you get up) and in the evening (or just before you go to bed). The more readings that you take, the better the result. You should aim to measure your blood pressure for 7 days. The minimum that you need to get an accurate result is 4 days of measurements.
-
-You may feel that this is quite complicated. We agree, which is why we have designed and built our website to help you. Now you have registered with us, we’ll send you reminders to check your blood pressure, and help you keep track of your measurements.
+To get started, the first thing you need to do is to take some more blood pressure readings. You need to take readings over at least 4 days. This will give you a more accurate picture of what your blood pressure is actually doing.
 
 So, <%= @when_next_reading %>, please go to HomeBloodPressure.co.uk to take <%= @a_another_reading %> pair of blood pressure readings.
 
-Stay healthy!
+If you have any questions for us, we’d love to hear from you.
 
-The HomeBloodPressure.co.uk team
+Dr Colin Coulthard and Dr Richard Thomas - HomeBloodPressure.co.uk founders.
