rearrange display_bp and remove img link border in IE

--- a/app/assets/stylesheets/current_bps.css.scss
+++ b/app/assets/stylesheets/current_bps.css.scss
@@ -179,6 +179,10 @@ h1 {
       width: 300px;
     }
     
+    #sign_up_benefits {
+      margin: 70px 0px 0px 430px;
+    }
+    
     #warning_msg {
       color: #ff0000;
     }
@@ -390,8 +394,8 @@ h1 {
       background-color:#ffffff;
       
       #title {
-        padding: 5px 20px 5px 20px;
-        line-height: 28px;
+        padding: 5px 30px 5px 30px;
+        line-height: 26px;
         float:left;
       }
       
