--- a/app/views/admin/current_bps_admin/index.html.erb
+++ b/app/views/admin/current_bps_admin/index.html.erb
@@ -22,8 +22,8 @@
         <td><%= current_bp.ampm %></td>
         <td><%= current_bp.sysbp %></td>
         <td><%= current_bp.diabp %></td>
-        <td><%= link_to 'Edit', edit_current_bp_path(current_bp) %></td>
-        <td><%= link_to 'Destroy', current_bp, method: :delete, data: { confirm: 'Are you sure?' } %></td>
+        <td><%= link_to 'Edit', edit_admin_current_bp_path(current_bp) %></td>
+        <td><%= link_to 'Destroy', admin_current_bp_path(current_bp), method: :delete, data: { confirm: 'Are you sure?' } %></td>
       </tr>
     <% end %>
   </tbody>
