--- a/app/views/admin/user_admin/index.html.erb
+++ b/app/views/admin/user_admin/index.html.erb
@@ -16,8 +16,8 @@
       <tr>
       	<td><%= user.id %></td>
         <td><%= user.email %></td>
-        <td><%= link_to 'Edit', edit_user_path(user) %></td>
-        <td><%= link_to 'Destroy', user_path(user), method: :delete, data: { confirm: 'Are you sure?' } %></td>
+        <td><%= link_to 'Edit', edit_admin_user_path(user) %></td>
+        <td><%= link_to 'Destroy', admin_user_path(user), method: :delete, data: { confirm: 'Are you sure?' } %></td>
         <td><%= link_to 'Send message', admin_mail_path %></td>
       </tr>
     <% end %>
