--- a/app/views/admin/user_admin/index.html.erb
+++ b/app/views/admin/user_admin/index.html.erb
@@ -18,7 +18,7 @@
         <td><%= user.email %></td>
         <td><%= link_to 'Edit', edit_admin_user_path(user) %></td>
         <td><%= link_to 'Destroy', admin_user_path(user), method: :delete, data: { confirm: 'Are you sure?' } %></td>
-        <td><%= link_to 'Message', new_admin_message_path %></td>
+        <td><%= link_to 'Message', new_admin_message_path(user) %></td>
       </tr>
     <% end %>
   </tbody>
