individual email tweak 1

--- a/app/views/admin/messages_admin/new_individual.html.erb
+++ b/app/views/admin/messages_admin/new_individual.html.erb
@@ -24,7 +24,7 @@
 	  <% if @admin_message.errors.any? %>
   			<div id='error_wrapper'>
 	    	<div id="error_explanation">
-				<%= error_messages_for "message" %>
+				<%= error_messages_for "admin_message" %>
 			</div>
 			</div>
   	<% end %>
