--- a/app/assets/stylesheets/scaffolds.css.scss
+++ b/app/assets/stylesheets/scaffolds.css.scss
@@ -276,7 +276,7 @@ a.button2:hover {
       padding-right: 20px;
     }
     
-    #message_content {
+    #message_content, #admin_message_content {
       width: 450px;
       font-size: 10pt;
     }
