--- a/app/views/admin/messages_admin/new.html.erb
+++ b/app/views/admin/messages_admin/new.html.erb
@@ -1,12 +1,12 @@
 <div id='main_full_width'>
-	<h1>Contact user</h1>
+	<h1>Contact ALL users</h1>
 	
-	<p>Sending email to <%= @admin_message_email %></p>
+	<p>Warning! You are about to mail ALL users. Use with caution!</p>
 
 	<div id='contact_us'>
 	
 	<div id='title'>
-		Contact user
+		Contact ALL users
 	</div>
 	
 	<%= render 'form' %>
