--- a/app/views/admin/menu.html.erb
+++ b/app/views/admin/menu.html.erb
@@ -3,5 +3,5 @@
 	<%= link_to("Users", admin_users_path) %><br /><br />
 	<%= link_to("Current BPs", admin_current_bps_path) %><p>These are the individual blood pressure readings.</p>
 	<%= link_to("Average BPs", admin_average_bps_path) %><p>These are the average of each pair of readings.</p>
-	<%= link_to("Mail users", admin_mail_path) %>
+	<%= link_to("Mail all users", new_admin_message_path) %>
 </div>
