--- a/app/views/notifier/admin_mail.html.erb
+++ b/app/views/notifier/admin_mail.html.erb
@@ -1,3 +1,3 @@
-<p style='margin: 10px 10px 0px 10px;'>Hello <%= @email %></p>
+<p style='margin: 10px 10px 0px 10px;'><%= @greeting %></p>
 
 <p style='margin: 10px 10px 0px 10px;'><%= @content %></p>
